# astor_aprendiendo

./: .gitignore  Animales.py  Constants.py  MainTicket.py  README.md  pyproject.toml  run_tests.bat
exchange_rate/: ExchangeRateUtils.py
http/: HttpUtils.py
strings/: StringUtils.py
test/: TestDateUtils.py  TestFileUtils.py  TestStringUtils.py  TestTicket.py
ticket/: Ticket.py  __main__.py
ticket/dates/: DateUtils.py
ticket/exchange_rate/: ExchangeRateUtils.py
ticket/files/: FileUtils.py
ticket/strings/: StringUtils.py
ticket/test/: test_date_utils.py  test_exchange_rate_utils.py  test_file_utils.py  test_string_utils.py  test_ticket.py
